--- a/website_school_management/views/programmes.xml
+++ b/website_school_management/views/programmes.xml
@@ -63,7 +63,7 @@
                     <div class="col-12">
                         <div class="d-flex flex-column-reverse flex-sm-row align-items-center align-items-sm-start justify-content-sm-between gap-4">
                             <h1 t-esc="program.name" />
-                            <a class="d-flex gap-3 align-items-center justify-content-center btn btn-primary h-fit-content w-fit-content" t-att-href="'/impression_programme/%s' %slug(program)" target="new" title="Imprimer le programme de cours" >
+                            <a class="d-flex gap-3 align-items-center justify-content-center btn btn-primary h-fit-content w-fit-content" t-att-href="'/impression_programme/%s' %slug(program)" target="_blank" title="Imprimer le programme de cours" >
                                 <span class="d-sm-none fw-bold">Imprimer le programme</span>
                                 <i class="fa fa-print fs-3" aria-hidden="true"></i>
                                 <span class="sr-only">Imprimer le programme de cours</span>
@@ -244,7 +244,7 @@
                                         <div class="table-row -cours">
                                             <div class="cell cell-name border" data-title="Nom">
                                                 <span class="cell-value">
-                                                    <a class="link-primary p-0" t-esc="course.title" t-att-href="'/cours/%s' % slug(course)" target="new"/>
+                                                    <a class="link-primary p-0" t-esc="course.title" t-att-href="'/cours/%s' % slug(course)" target="_blank"/>
                                                 </span>
                                             </div>
                                             <div class="cell border" data-title="Heures">
@@ -293,61 +293,289 @@
     <template id="cours_fiche">
         <t t-set="additional_title" t-value="course.name" />
         <t t-call="website.layout"> <!-- Affiche le layout du site web -->
-            <div class="container">
-                <t t-set="course_doc" t-value="course.documentation_id" />
-                <t t-call="website_school_management.cours_fiche_details" t-if="not(course_group_id) or course_doc.course_group_id.id == course_group_id" />
+            <div class="container my-5">
+                <div class="row">
+                    <div class="col-12">
+                        <t t-set="course_doc" t-value="course.documentation_id" />
+                        <t t-call="website_school_management.cours_fiche_details" t-if="not(course_group_id) or course_doc.course_group_id.id == course_group_id" />
+                    </div>
+                </div>
             </div>
         </t>      
     </template>
 
-  
-  
     <template id="cours_fiche_details">
         <div>
-            <h1>Détails du cours : <span t-field="course.name"/></h1>
-            <h3>par <span t-field="course_doc.author_id"/></h3>
+            <h1 t-out="course.name"/>
+            <t t-if="course_doc.author_id">
+                <span class="d-block h3 text-muted">Par <span class="fst-italic" t-field="course_doc.author_id"/></span>
+            </t>
         </div>
-        <div>
-            <ul>
-                <li>Cycle : <span t-field="course.cycle_id"/></li>
-                <li>Groupe de cours : <span t-field="course.course_group_id.ue_id"/> - <span t-field="course.course_group_id"/></li>
-                <li>Niveau : <span t-field="course.level"/></li>
-                <li>Crédits : <span t-field="course.credits"/></li>
-                <li>Heures : <span t-field="course.hours"/></li>
-                <li>Pondération : <span t-field="course.weight"/></li>
-                <li>Obligatoire : <t t-if="course_doc.mandatory">Oui</t><t t-if="not(course_doc.mandatory)">Non</t></li>
-                <li>Langue : <span t-field="course_doc.language"/></li>
-                <li>Professeurs : <span t-esc="', '.join(map( lambda x: x.name, course_doc.staff_ids))"/></li>
-            </ul>
-        </div>
-
-        <div>
-            <h3 class="panel-title">Horaire - <span t-field="course_doc.schedule"/></h3>
-            <span t-raw="course_doc.schedule_text"/>
-        </div>
-        <div>
-            <h3 class="panel-title">Contenu</h3>
-            <span t-raw="course_doc.content"/>
-        </div>
-        <div>
-            <h3 class="panel-title">Méthode</h3>
-            <span t-raw="course_doc.method"/>
-        </div>
-        <div>
-            <h3 class="panel-title">Résultats d'apprentissage</h3>
-            <span t-raw="course_doc.learning_outcomes"/>
-        </div>
-        <div>
-            <h3 class="panel-title">Références</h3>
-            <span t-raw="course_doc.references"/>
-        </div>
-        <div>
-            <h3 class="panel-title">Pré-requis/Co-requis</h3>
-            <span t-raw="course_doc.pre_co_requiered"/>
-        </div>
-        <div>
-            <h3 class="panel-title">Méthode d'évaluation</h3>
-            <span t-raw="course_doc.evaluation_method"/>
+        <dl class="d-flex flex-wrap pt-2 mt-3 mb-4">
+            <t t-if="course.cycle_id">
+                <div class="flex-grow-1">
+                    <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">Cycle</dt>
+                    <dd class="border text-center border-top-0 d-block w-100 py-2 px-3 mb-3">
+                        <span t-field="course.cycle_id"/>
+                    </dd>
+                </div>
+            </t>
+            <t t-if="course.course_group_id.ue_id or course.course_group_id">
+                <div class="flex-grow-1">
+                    <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">Groupe de cours</dt>
+                    <dd class="border text-center border-top-0 d-block w-100 py-2 px-3 mb-3">
+                        <span t-field="course.course_group_id.ue_id"/> - <span t-field="course.course_group_id"/>
+                    </dd>
+                </div>
+            </t>
+            <t t-if="course.level">
+                <div class="flex-grow-1">
+                    <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">Niveau</dt>
+                    <dd class="border text-center border-top-0 d-block w-100 py-2 px-3 mb-3" t-esc="course.level" />
+                </div>
+            </t>
+            <t t-if="course.credits">
+                <div class="flex-grow-1">
+                    <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">Crédits</dt>
+                    <dd class="border text-center border-top-0 d-block w-100 py-2 px-3 mb-3" t-esc="course.credits" />
+                </div>
+            </t>
+            <t t-if="course.hours">
+                <div class="flex-grow-1">
+                    <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">Heures</dt>
+                    <dd class="border text-center border-top-0 d-block w-100 py-2 px-3 mb-3" t-esc="course.hours" />
+                </div>
+            </t>
+            <t t-if="course.weight">
+                <div class="flex-grow-1">
+                    <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">Pondération</dt>
+                    <dd class="border text-center border-top-0 d-block w-100 py-2 px-3 mb-3">
+                        <span t-field="course.weight"/>
+                    </dd>
+                </div>
+            </t>
+            <t t-if="course_doc.mandatory != Null">
+                <div class="flex-grow-1">
+                    <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">Obligatoire</dt>
+                    <dd class="border text-center border-top-0 d-block w-100 py-2 px-3 mb-3">
+                        <t t-if="course_doc.mandatory">Oui</t><t t-if="not(course_doc.mandatory)">Non</t>
+                    </dd>
+                </div>
+            </t>
+            <t t-if="course_doc.language">
+                <div class="flex-grow-1">
+                    <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">Langue</dt>
+                    <dd class="border text-center border-top-0 d-block w-100 py-2 px-3 mb-3">
+                        <span t-field="course_doc.language"/>
+                    </dd>
+                </div>
+            </t>
+            <t t-if="course_doc.staff_ids">
+                <div class="flex-grow-1">
+                    <dt class="border text-center d-block w-100 py-2 px-3 o_cc5">Professeurs</dt>
+                    <dd class="border text-center border-top-0 d-block w-100 py-2 px-3 mb-3" t-esc="', '.join(map( lambda x: x.name, course_doc.staff_ids))" />
+                </div>
+            </t>
+        </dl>
+        <div class="accordion" id="course_detail">
+            <t t-if="course_doc.schedule_text">
+                <div class="accordion-item border mb-4">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#collapse_horaire" aria-controls="collapse_horaire">
+                            <span class="h4">
+                                Horaire 
+                                <span class="accented-color">|</span> 
+                                <span t-field="course_doc.schedule"/>
+                            </span> 
+                        </button>
+                    </h2>
+                    <div class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#course_detail" id="collapse_horaire">
+                        <div class="accordion-body border-top px-2 px-lg-4">
+                            <div class="group-content p-3 border">
+                                <span t-raw="course_doc.schedule_text"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </t>
+            <t t-else="">
+                <div class="border mb-4">
+                    <h2 class="h4 mb-0 py-3 px-4 border-bottom">
+                        Horaire  
+                    </h2>
+                    <p class="accordion-body text-center text-muted my-0 pt-3 pb-3">
+                        Information non disponible.
+                    </p>
+                </div>
+            </t>
+            <t t-if="course_doc.content">
+                <div class="accordion-item border mb-4">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#collapse_contenu" aria-controls="collapse_contenu">
+                            <span class="h4">
+                                Contenu 
+                            </span> 
+                        </button>
+                    </h2>
+                    <div class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#course_detail" id="collapse_contenu">
+                        <div class="accordion-body border-top px-2 px-lg-4">
+                            <div class="group-content p-3 border">
+                                <span t-raw="course_doc.content"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </t>
+            <t t-else="">
+                <div class="border mb-4">
+                    <h2 class="h4 mb-0 py-3 px-4 border-bottom">
+                        Contenu 
+                    </h2>
+                    <p class="accordion-body text-center text-muted my-0 pt-3 pb-3">
+                        Information non disponible.
+                    </p>
+                </div>
+            </t>
+            <t t-if="course_doc.method">
+                <div class="accordion-item border mb-4">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#collapse_methode" aria-controls="collapse_methode">
+                            <span class="h4">
+                                Méthode 
+                            </span> 
+                        </button>
+                    </h2>
+                    <div class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#course_detail" id="collapse_methode">
+                        <div class="accordion-body border-top px-2 px-lg-4">
+                            <div class="group-content p-3 border">
+                                <span t-raw="course_doc.method"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </t>
+            <t t-else="">
+                <div class="border mb-4">
+                    <h2 class="h4 mb-0 py-3 px-4 border-bottom">
+                        Méthode 
+                    </h2>
+                    <p class="accordion-body text-center text-muted my-0 pt-3 pb-3">
+                        Information non disponible.
+                    </p>
+                </div>
+            </t>
+            <t t-if="course_doc.learning_outcomes">
+                <div class="accordion-item border mb-4">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#collapse_resultats" aria-controls="collapse_resultats">
+                            <span class="h4">
+                                Résultats d'apprentissage 
+                            </span> 
+                        </button>
+                    </h2>
+                    <div class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#course_detail" id="collapse_resultats">
+                        <div class="accordion-body border-top px-2 px-lg-4">
+                            <div class="group-content p-3 border">
+                                <span t-raw="course_doc.learning_outcomes"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </t>
+            <t t-else="">
+                <div class="border mb-4">
+                    <h2 class="h4 mb-0 py-3 px-4 border-bottom">
+                        Résultats d'apprentissage    
+                    </h2>
+                    <p class="accordion-body text-center text-muted my-0 pt-3 pb-3">
+                        Information non disponible.
+                    </p>
+                </div>
+            </t>
+            <t t-if="course_doc.references">
+                <div class="accordion-item border mb-4">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#collapse_references" aria-controls="collapse_references">
+                            <span class="h4">
+                                Références 
+                            </span> 
+                        </button>
+                    </h2>
+                    <div class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#course_detail" id="collapse_references">
+                        <div class="accordion-body border-top px-2 px-lg-4">
+                            <div class="group-content p-3 border">
+                                <span t-raw="course_doc.references"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </t>
+            <t t-else="">
+                <div class="border mb-4">
+                    <h2 class="h4 mb-0 py-3 px-4 border-bottom">
+                        Références  
+                    </h2>
+                    <p class="accordion-body text-center text-muted my-0 pt-3 pb-3">
+                        Information non disponible.
+                    </p>
+                </div>
+            </t>
+            <t t-if="course_doc.pre_co_requiered">
+                <div class="accordion-item border mb-4">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#collapse_requis" aria-controls="collapse_requis">
+                            <span class="h4">
+                                Pré-requis/Co-requis
+                            </span> 
+                        </button>
+                    </h2>
+                    <div class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#course_detail" id="collapse_requis">
+                        <div class="accordion-body border-top px-2 px-lg-4">
+                            <div class="group-content p-3 border">
+                                <span t-raw="course_doc.pre_co_requiered"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </t>
+            <t t-else="">
+                <div class="border mb-4">
+                    <h2 class="h4 mb-0 py-3 px-4 border-bottom">
+                        Pré-requis/Co-requis    
+                    </h2>
+                    <p class="accordion-body text-center text-muted my-0 pt-3 pb-3">
+                        Information non disponible.
+                    </p>
+                </div>
+            </t>
+            <t t-if="course_doc.evaluation_method">
+                <div class="accordion-item border mb-4">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#collapse_evalutation" aria-controls="collapse_evalutation">
+                            <span class="h4">
+                                Méthode d'évaluation 
+                            </span> 
+                        </button>
+                    </h2>
+                    <div class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#course_detail" id="collapse_evalutation">
+                        <div class="accordion-body border-top px-2 px-lg-4">
+                            <div class="group-content p-3 border">
+                                <span t-raw="course_doc.evaluation_method"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </t>
+            <t t-else="">
+                <div class="border mb-4">
+                    <h2 class="h4 mb-0 py-3 px-4 border-bottom">
+                        Méthode d'évaluation    
+                    </h2>
+                    <p class="accordion-body text-center text-muted my-0 pt-3 pb-3">
+                        Information non disponible.
+                    </p>
+                </div>
+            </t>
         </div>
     </template>
     
