Added search in footer

--- a/website_school_portal/views/footer.xml
+++ b/website_school_portal/views/footer.xml
@@ -69,6 +69,19 @@
                                     <li><i class="fa fa-phone fa-fw me-2"/><span class="o_force_ltr"><a t-att-href="'tel:'+res_company.phone"><t t-esc="res_company.phone" /></a></span></li>
                                 </ul>
                                 <hr/>
+                                <section class="s_title o_colored_level o_we_force_no_transition" data-name="Recherche">
+                                    <div class="s_allow_columns container">
+                                        <form method="get" data-snippet="s_searchbar_input" class="o_searchbar_form s_searchbar_input" action="/website/search" data-name="Rechercher">
+                                            <div role="search" class="input-group ">
+                                                <input type="search" name="search" class="search-query form-control oe_search_box None" placeholder="Recherche…" data-search-type="all" data-limit="0" data-display-image="false" data-display-description="false" data-display-extra-link="false" data-display-detail="false" data-order-by="name asc" autocomplete="off"/>
+                                                <button type="submit" aria-label="Rechercher" title="Rechercher" class="btn oe_search_button btn-primary">
+                                                    <i class="oi oi-search"></i>
+                                                </button>
+                                            </div>
+                                            <input name="order" type="hidden" class="o_search_order_by" value="name asc"/> 
+                                        </form>
+                                    </div>
+                                </section>
                                 <div class="s_social_media text-start o_not_editable" data-snippet="s_social_media" data-name="Social Media" contenteditable="false">
                                     <h5 class="s_social_media_title d-none" contenteditable="true">Follow us</h5>
                                     <t t-call="website_school_portal.hz_socials" />
