Fix calendar view (#72)
* FIX : remove old covid related code

* FIX : remove portal related code, to relocate it to website_school_portal

* First snippet structure

* First snippet structure

* First snippet structure

* First snippet structure

* First snippet structure

* First snippet structure

* Add Bookings snippet

* Change to 100% width

---------

Co-authored-by: ito-invest-js <jerome.sonnet@ito-management.com>

--- a/website_booking/views/website_booking.xml
+++ b/website_booking/views/website_booking.xml
@@ -39,6 +39,8 @@
             <link href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css' rel='stylesheet' type="text/css"/>
             
             <link href="https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@5.10.2/main.css" rel="stylesheet" type="text/css"/>
+            <script src='https://cdn.jsdelivr.net/npm/moment-timezone@0.5.31/builds/moment-timezone-with-data.js'></script>
+            <script src='https://cdn.jsdelivr.net/npm/fullcalendar-scheduler@5.10.2/main.js'></script>
             
             <!-- <link rel="stylesheet" href="/website_booking/static/lib/timepicker/jquery.timepicker.css" type="text/css"/> -->
             
@@ -75,11 +77,10 @@
         <record id="action_website_booking" model="ir.actions.act_url">
             <field name="name">Online Booking</field>
             <field name="type">ir.actions.act_url</field>
-            <field name="url">/booking#category_id=16</field>
+            <field name="url">/bookings</field>
             <field name="target">new</field>
         </record>
 
         <menuitem name="Online Booking" id="menu_school_booking" web_icon="calendar,static/description/icon.png" sequence="25" action="action_website_booking" />
 
-    
 </odoo>
