--- a/school_registration/views/registration_view.xml
+++ b/school_registration/views/registration_view.xml
@@ -148,7 +148,7 @@
                   </group>
                 </div>
                 <div class="row">
-                  <div class="col-6">
+                  <div class="col-4">
                     <div class="row mt-4">
                       <div class="col-2 text-center"><button
                                                 name="action_fill_partner_data"
@@ -160,19 +160,16 @@
                                             >Mettre à jour la fiche de l'étudiant</h4></div>
                     </div>
                   </div>
-                  <div class="col-6">
+                  <div class="col-4">
                     <div class="row mt-4">
                       <div class="col-2 text-center"><button name="action_fill_program_data" type="object" class="btn btn-primary" icon="fa-refresh">Update</button></div>
                       <div class="col-10"><h4>Mettre à jour les informations d'inscription</h4></div>
                     </div>
                   </div>
                   <div class="col-4">
-                    <div class="row mt-4" attrs="{'invisible': [('forms_attachment_ids_count', '=', 0)]}">
+                    <div class="row mt-4">
                       <div class="col-2 text-center"><button name="action_fill_google_drive" type="object" class="btn btn-primary" icon="fa-refresh">Update</button></div>
                       <div class="col-10"><h4>Envoyer les documents vers Google Drive</h4></div>
-                    </div>
-                    <div class="row mt-4" attrs="{'invisible': [('forms_attachment_ids_count', '!=', 0)]}">
-                      <h4>Pas d'attachement à importer</h4>
                     </div>
                   </div>
                 </div>
